--- a/base/面经/面经.md
+++ b/base/面经/面经.md
@@ -14,3 +14,11 @@
 
 ###滴滴
 ###字节
+###知乎
+1.https和http的区别，已经https的通信流程
+2.地址栏输入一个网址，访问到服务器的过程
+3.tcp三次握手
+4.mysql的隔离级别，间隙锁，锁范围
+5.mvcc多版本控制
+6.给一个二叉树，说出前中后序遍历结果，问这个二叉树满足堆的条件嘛
+7.redis使用场景，缓存热点数据怎么做的
