--- a/base/面经/面经.md
+++ b/base/面经/面经.md
@@ -13,12 +13,81 @@
 5.算法？？
 
 ###滴滴
-###字节
+###百度
+1. 数据库乐观锁如何实现？
+```bigquery
+1、版本号机制；
+   一般是说在数据表中加上一个数据库版本号version字段，在表述数据被修改的次数当数据被修改时，它的version 值会加1。
+   当然线程A需要更新数据值时，在读取数据的同时也会读取 version 值，在提交更新时，若刚才读取到的 version 值为当前数据库中的 version 值相等时才更新，否则重试更新操作，直到更新成功。
+2、CAS算法
+
+```
+
+2. 索引创建语句
+```bigquery
+alter table *** add PRIMARY KEY(a, b, c)
+alter table *** add UNIQUE (a, b, c)
+alter table *** add INDEX idx_abc(a, b, c)
+create index 索引名 on 表名(字段名);
+alter table *** add FULLTEXT idx_abc(a, b, c)
+```
+3. 切片的扩容策略
+   如果切片目标长度大于=原长度2倍，按照目标长度扩容；
+   否则：
+   如果切片长度<1024,按照2倍进行扩容；
+   否则，每次扩容原容量1/4, 直到大于等于目标长度。
+
+4. crontab 定时任务规则
+   分钟 小时 日 月 星期 mycommand
+
+5. 正则（没有用，所以没有问）
+6. xss攻击原理
+7. sql: 数据量很大时，分页查询很慢，怎么办
+   语句：select name,id from users limit 1, 10
+   面试官解释：没有查询条件，有limit会全表扫描，导致查询很慢；
+   优化：加查询条件，如 加1些条件，如id > 某个范围；
+
+8. linux命令：日志文件筛选出302的日志行：
+``` 
+grep -n 302 log | sort | uniq | wc -l
+ -n: 显示行号
+-C 10: 打印匹配行的前后10行数据
+-A 10: 打印匹配行的后10行数据
+-B 10: 打印匹配行的前10行数据
+-e: 使用正则搜索
+-i: 不区分大小写
+-v: 查找不包含指定内容的行
+-w: 按单词搜索
+-c: 统计匹配到的次数
+
+wc: 统计文件中的字节数、字数、行数
+-c: 统计字节数
+-w: 统计字符数
+-l: 统计行数
+
+sort 命令：对文件内容进行排序
+-k：以哪个区间 (field) 来进行排序
+-n：依照数值的大小排序
+-o<输出文件>：将排序后的结果存入指定的文件
+-r：降序
+-u：忽略相同行
+-t<分隔字符>：指定分隔符，默认的分隔符为空白字符和非空白字符之间的空字符
+
+eg: 文件排序：第三列相同时，按照第一列降序排列
+sort -t $'\t' -k 3n -k 1 sort.log
+
+awk -F '|' '{print $1}' log.txt | sort | uniq -c | sort -nrk 1 -t ' '| head -5
+sed -n '30745,30790p' catalina.out
+```
 ###知乎
-1.https和http的区别，已经https的通信流程
-2.地址栏输入一个网址，访问到服务器的过程
-3.tcp三次握手
-4.mysql的隔离级别，间隙锁，锁范围
-5.mvcc多版本控制
-6.给一个二叉树，说出前中后序遍历结果，问这个二叉树满足堆的条件嘛
-7.redis使用场景，缓存热点数据怎么做的
+1. https和http的区别，已经https的通信流程
+2. 地址栏输入一个网址，访问到服务器的过程
+3. tcp三次握手
+4. mysql的隔离级别，间隙锁，锁范围
+5. mvcc多版本控制
+6. 给一个二叉树，说出前中后序遍历结果，问这个二叉树满足堆的条件嘛
+7. redis使用场景，缓存热点数据怎么做的
+### 蓝湖
+1. 数据库主从复制延时怎么办
+2. 数据库事务rr级别下死锁，为什么
+3. kafka消息堆积了怎么办，偏移量维护在哪.工作流程..
