--- a/base/面经/面经.md
+++ b/base/面经/面经.md
@@ -32,6 +32,7 @@ create index 索引名 on 表名(字段名);
 alter table *** add FULLTEXT idx_abc(a, b, c)
 ```
 3. 切片的扩容策略
+
    如果切片目标长度大于=原长度2倍，按照目标长度扩容；
    否则：
    如果切片长度<1024,按照2倍进行扩容；
@@ -91,3 +92,5 @@ sed -n '30745,30790p' catalina.out
 1. 数据库主从复制延时怎么办
 2. 数据库事务rr级别下死锁，为什么
 3. kafka消息堆积了怎么办，偏移量维护在哪.工作流程..
+4. etcd 怎么保证的分布式一致性
+5. grpc 的protobuf怎么二进制序列化的，有用json做grpc嘛？ 网关层是怎么做的
