--- a/base/面经/面经.md
+++ b/base/面经/面经.md
@@ -12,6 +12,72 @@
 5.算法？？
 
 ###滴滴 一面
+1. memcache 线程模型  多线程  string
+2. redis 线程模型  数据结构  资源竞争 io多路复用模型-reactor
+3. 线程和进程的区别
+4. 事务隔离级别及问题、解决
+5. mvcc实现原理
+6. mq 如何实现可靠性消费；消息提交方式：自动提交、手动提交区别，使用场景
+   1. 同一个消费组的消费者不重复同一个分区的消息
+   2. 重复消费-接口幂等性
+7. mysql 和 tidb 对比，tidb 分布式协议 raft
+```
+有一层无状态的 SQL Layer ，兼容绝大多数 MySQL 语法，对外暴露 MySQL 网络协议，
+负责解析用户的 SQL 语句，生成分布式的 Query Plan，翻译成底层 Key Value 操作发送给 TiKV ， 
+TiKV 是真正的存储数据的地方，是一个分布式 Key Value 数据库，支持弹性水平扩展
+```
+```azure
+* 纯分布式架构，拥有良好的扩展性，支持弹性的扩缩容
+* 支持 SQL，对外暴露 MySQL 的网络协议，并兼容大多数 MySQL 的语法，在大多数场景下可以直接替换 MySQL
+* 默认支持高可用，在少数副本失效的情况下，数据库本身能够自动进行数据修复和故障转移，对业务透明
+* 支持 ACID 事务，对于一些有强一致需求的场景友好，例如：银行转账
+* 具有丰富的工具链生态，覆盖数据迁移、同步、备份等多种场景
+``` 
+```
+Raft 协议
+接下来 TiKV 的实现面临一件更难的事情：如何保证单机失效的情况下，数据不丢失，不出错？
+TiKV 选择了 Raft 算法。Raft 是一个一致性协议，本文只会对 Raft 做一个简要的介绍，细节问题可以参考它的论文。Raft 提供几个重要的功能：
+* Leader（主副本）选举
+* 成员变更（如添加副本、删除副本、转移 Leader 等操作）
+* 日志复制
+TiKV 利用 Raft 来做数据复制，每个数据变更都会落地为一条 Raft 日志，通过 Raft 的日志复制功能，将数据安全可靠地同步到复制组的每一个节点中。
+不过在实际写入中，根据 Raft 的协议，只需要同步复制到多数节点，即可安全地认为数据写入成功。
+
+##### 总结一下
+通过单机的 RocksDB，TiKV 可以将数据快速地存储在磁盘上；通过 Raft，将数据复制到多台机器上，以防单机失效。
+数据的写入是通过 Raft 这一层的接口写入，而不是直接写 RocksDB。
+通过实现 Raft，TiKV 变成了一个分布式的 Key-Value 存储，少数几台机器宕机也能通过原生的 Raft 协议自动把副本补全，可以做到对业务无感知。
+```
+8. mysql 索引结构 平衡树特点及优势（防止二叉树退化成链表）
+9. 延时队列的实现（没有用过rocketmq 就过了）
+10. 算法题：LRU算法的实现。
+
+### 蓝湖面试
+1. kafka topic 突然堆积怎么办？
+```
+重要的是确定原因，通过日志查看消费任务是否正常，如果正常的话看消费能力是否需要提升。
+   存量消息：提升消费能力
+   （1） 实时/消费任务挂掉，
+   a. 任务重新启动后直接消费最新的消息，对于"滞后"的历史数据采用离线程序进行"补漏"。
+   b. 任务启动从上次提交offset处开始消费处理
+   （2） Kafka分区数设置的不合理（太少）和消费者"消费能力"不足：考虑增加 topic 的 partition 的个数，同时提升消费者组的消费者数量，消费数 = 分区数 （二者缺一不可）注意：扩容后会导致rebalance
+   （3）批量拉取消息，多线程消费消息。批次拉取数量过少（拉取数据/处理时间 < 生产速度），使处理的数据小于生产的数据，也会造成数据积压。（考虑动态配置参数、考虑offset提交方式）
+   增量消息：
+   （1） 也可以考虑topic拆分到其他topic中；
+   （2） Kafka消息的key不均匀，导致分区间数据不均衡
+   a. 可以在Kafka producer处，给key加随机后缀，使其均衡
+```
+2. rpc通信过程中如何保证有序性
+   1. 提示：点对点，A ->B , B->A 
+   2. 通过一致性hash算法，保证同一个ordeid的数据都给同一台服务器。同一台服务器，可以根据请求的先后顺序放到缓存队列里，在用线程去消费队列
+3. mysql 主从存在延迟怎么办？
+   1. 强制读主怎么实现？需要修改代码吗？连接池
+   2. 选择性读主：利用redis缓存；
+4. mysql 互斥锁、共享锁 sql怎么写
+   1. select ... from ... FOR UPDATE; 默认排他锁
+   2. select ... from ... LOCK IN SHARE MODE; 读锁共享锁
+5. 索引是否命中的问题
+
 ###百度 一面
 1. 数据库乐观锁如何实现？
 ```bigquery
