--- a/base/面经/面经.md
+++ b/base/面经/面经.md
@@ -12,6 +12,26 @@
 5.算法？？
 
 ###滴滴 一面
+1. go的字符串拼接，用过哪些，区别是什么
+2. go中怎么做捕获异常
+3. go中对map操作 key要注意什么?那些结构体可以作为key
+4. GMP模型
+5. redis的数据结构和底层实现，一般用这些解决什么场景
+6. redis线程模型，怎么支持高并发。内部是如何做的（fork子进程）
+7. redis主从复制过程，为什么fork子进程
+8. redis get一个大key是怎么做的（非阻塞io）
+9. sql查询慢查询有没有自己分析过，关注哪些参数，怎么解决的
+10. 组合索引abc，底层是创建3个索引树嘛？查询是怎么查询的
+11. 查询like %a为什么不走索引，还有其他的不走索引的查询嘛
+12. B+树特点，为什么用b+树，红黑树，b树不行的原因
+13. 数据库设计：一个订单表，三个核心字段，orderID、userID、price 每天大概有100万数据，实现功能：
+
+
+    1.查询一个订单的具体价格
+    2.给定一个用户拉取历史订单
+14. 算法：合并两个有序链表
+
+###滴滴 一面
 1. memcache 线程模型  多线程  string
 2. redis 线程模型  数据结构  资源竞争 io多路复用模型-reactor
 3. 线程和进程的区别
@@ -159,3 +179,34 @@ sed -n '30745,30790p' catalina.out
 3. kafka消息堆积了怎么办，偏移量维护在哪.工作流程..
 4. etcd 怎么保证的分布式一致性
 5. grpc 的protobuf怎么二进制序列化的，有用json做grpc嘛？ 网关层是怎么做的
+
+### 高德地图 一面
+1. 项目介绍，说说你比较印象深刻的项目
+2. 查询日志的top10条数据，如果多台服务怎么查询
+3. redis的淘汰机制和过期策略
+4. 如果大量的key过期了会导致什么，怎么解决？加锁是为了保障什么。这么做会对于业务方来讲有帮助嘛
+5. redis分布式锁怎么做的
+6. lua脚本为了解决什么，如果我执行一个lua脚本期间，其他的线程也对这个key执行，会有什么情况
+7. lua脚本里面写for循环，会不会导致redis阻塞
+8. redis的数据结构有了解，除了5种基本的数据结构还了解什么
+9. 布隆过滤器了解嘛。底层是怎么做的，一般使用他解决什么
+10. redis集群用过哪些？哨兵的作用是什么，怎么保证一致性的，
+11. redis主从同步流程
+12. redis分片集群是怎么做的，谁来管理的hash槽，为什么是1024个，谁负责做hash值和槽位的对应关系
+13. zset数据结构有了解嘛。什么是跳表，为什么使用跳表不用B+树
+14. 那mysql索引底层为什么使用b+树
+15. 设计：有一个发号器，里面有100个账号，每次获取一个账号，怎么实现条件限制
+```text
+1. 一个账号每天能领取上线时1000次
+2. 一个账号连续10分钟 领取不能超过100次
+```
+16. 事务的隔离级别，如果解决的脏读
+17. 间隙锁是什么情况下会触发，间隙锁的坏处是什么.会造成什么问题
+18. 为什么事务会造成死锁？
+19. 乐观锁悲观锁分别是什么，
+20. mvcc了解嘛？大致说说，什么是当前读，快照读
+21. 读视图的工作原理是什么样的，如果我想读取最新的数据，怎么办
+22. 索引都了解哪些，什么情况下索引失效
+23. 消息队列都用过什么，kafka怎么保证数据可靠性的，有如何实现消息顺序性的
+24. 用golang实现  有M个生产者，N个消费者，生产这生产数据供给消费者消费，需实现：在生成者全部生产完数据，并且消费者消费完所有的数据之后。该程序才能退出
+25. 算法 ： 最长公共前缀
